--- a/sass/components/_social-links.scss
+++ b/sass/components/_social-links.scss
@@ -50,8 +50,6 @@
   margin-bottom: 60px;
   &__title {
     margin-bottom: 20px;
-    //   margin-left: 70px;
-    //   padding-top: 12px;
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
@@ -61,9 +59,32 @@
   }
 
   &--footered {
-    // margin-left: 70px;
     align-self: flex-start;
-    // padding-top: 12px;
+  }
+}
+
+@media screen and (min-width: $tablet-min) and (max-width: $desktop-max) {
+  .social-links {
+    margin-bottom: 0;
+
+    &--tableted {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-top: 5px;
+      margin-left: 165px;
+    }
+  }
+}
+
+@media screen and (min-width: $desktop-min) {
+  .social-links {
+    margin-bottom: 60px;
+
+    &--footered {
+      margin-left: 70px;
+      margin-top: 12px;
+    }
   }
 }
 
