--- a/sass/utils/_brakepoints.scss
+++ b/sass/utils/_brakepoints.scss
@@ -1,3 +1,7 @@
-$mobile: 480px;
-$tablet: 768px;
-$desktop: 1600px;
+$mobile-max: 479px;
+$tablet-max: 767px;
+$desktop-max: 1599px;
+
+$mobile-min: 480px;
+$tablet-min: 768px;
+$desktop-min: 1600px;
