--- a/css/main.css
+++ b/css/main.css
@@ -1,44 +1,47 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap");
-.hero, .features, .team, .partners, .portfolio {
-  width: 480px;
+.hero, .features, .team, .partners, .portfolio, .page-footer {
+  width: 100%;
+  min-width: 480px;
   padding-top: 60px;
   padding-bottom: 60px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
-@media screen and (min-width: 768px) and (max-width: 767px) {
-  .hero, .features, .team, .partners, .portfolio {
-    width: 768px;
+@media screen and (max-width: 1599px) {
+  .hero, .features, .team, .partners, .portfolio, .page-footer {
+    padding-top: 60px;
+    padding-bottom: 60px;
   }
 }
 
 @media screen and (min-width: 1600px) {
-  .hero, .features, .team, .partners, .portfolio {
-    width: 1600px;
+  .hero, .features, .team, .partners, .portfolio, .page-footer {
     padding-top: 94px;
     padding-bottom: 94px;
   }
 }
 
-.header_conteiner, .features__conteiner, .team__conteiner, .partners .partners__conteiner, .portfolio__conteiner, .footer-conteiner {
+.header_conteiner, .features__conteiner, .team__conteiner, .partners__conteiner, .portfolio__conteiner, .footer-conteiner {
   width: 480px;
   padding: 0 15px 0 15px;
   margin-right: auto;
   margin-left: auto;
 }
 
-@media screen and (min-width: 768px) {
-  .header_conteiner, .features__conteiner, .team__conteiner, .partners .partners__conteiner, .portfolio__conteiner, .footer-conteiner {
+@media screen and (min-width: 768px) and (max-width: 1599px) {
+  .header_conteiner, .features__conteiner, .team__conteiner, .partners__conteiner, .portfolio__conteiner, .footer-conteiner {
     width: 768px;
   }
 }
 
 @media screen and (min-width: 1600px) {
-  .header_conteiner, .features__conteiner, .team__conteiner, .partners .partners__conteiner, .portfolio__conteiner, .footer-conteiner {
+  .header_conteiner, .features__conteiner, .team__conteiner, .partners__conteiner, .portfolio__conteiner, .footer-conteiner {
     width: 1200px;
   }
 }
 
-.header_conteiner, .nav, .nav__list, .hero, .icon__wrapper, .production__list, .social-list, .m-socials__list, .partners .partners__list, .portfolio__button-list, .agreement-wrapper {
+.header_conteiner, .nav, .nav__list, .hero, .icon__wrapper, .production__list, .social-list, .m-socials__list, .partners__list, .portfolio__button-list, .agreement-wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -54,7 +57,7 @@
   text-decoration: none;
 }
 
-.nav__list, .contacts__list, .features__list, .production__list, .team__list, .social-list, .m-socials__list, .partners .partners__list, .portfolio__button-list, .portfolio__card-list, .address__list, .m-nav__list, .m-contacts__list {
+.nav__list, .contacts__list, .features__list, .production__list, .team__list, .social-list, .m-socials__list, .partners__list, .portfolio__button-list, .portfolio__card-list, .address__list, .m-nav__list, .m-contacts__list {
   list-style: none;
 }
 
@@ -112,12 +115,18 @@ ul {
   padding: 0;
 }
 
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
 .page-header {
+  position: relative;
   border-bottom: 1px solid #ececec;
 }
 
 .header_conteiner {
-  position: relative;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -339,7 +348,7 @@ ul {
 }
 
 .hero {
-  width: 100%;
+  max-width: 100%;
   padding: 118px 60px;
   text-align: center;
   border-right-color: #c4c4c4;
@@ -417,13 +426,12 @@ ul {
   letter-spacing: 0.03em;
 }
 
-@media screen and (max-width: 767px) {
-  __item {
-    margin-bottom: 30px;
-  }
-  __item:last-child {
-    margin-bottom: 0;
-  }
+.features__item {
+  margin-bottom: 30px;
+}
+
+.features__item:last-child {
+  margin-bottom: 0;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1599px) {
@@ -446,7 +454,7 @@ ul {
   .features__item:nth-child(2n) {
     margin-right: 0;
   }
-  .features__item:nth-child(n + 5) {
+  .features__item:nth-child(n + 3) {
     margin-bottom: 0;
   }
 }
@@ -467,6 +475,7 @@ ul {
   .features__item {
     max-width: 270px;
     margin-right: 30px;
+    margin-bottom: 0;
   }
   .features__item:last-child {
     margin-right: 0;
@@ -602,7 +611,7 @@ ul {
     margin-bottom: 0;
   }
   .team-member__img {
-    width: 354px;
+    max-width: 100%;
   }
 }
 
@@ -626,7 +635,7 @@ ul {
   .team-member {
     width: 270px;
     margin-right: 30px;
-    margin-bottom: 30px;
+    margin-bottom: 0;
   }
   .team-member:last-child {
     margin-right: 0;
@@ -774,17 +783,33 @@ ul {
   display: none;
 }
 
-.partners .partners__title {
-  font-style: normal;
-  font-weight: 700;
+.partners__title {
   text-align: center;
+  margin-bottom: 30px;
+  font-weight: 700;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   color: #212121;
 }
 
-.partners .partners__list {
+.partners__list {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+}
+
+@media screen and (min-width: 320px) and (max-width: 479px) {
+  .partners__item {
+    width: 210px;
+    min-width: calc(46.67%);
+    margin-right: 30px;
+    margin-bottom: 30px;
+  }
+  .partners__item:nth-child(2n) {
+    margin-right: 0;
+  }
+  .partners__item:nth-child(n + 5) {
+    margin-bottom: 0;
+  }
 }
 
 .partner {
@@ -819,7 +844,7 @@ ul {
 
 @media screen and (max-width: 767px) {
   .partners__item {
-    width: calc(46.67%);
+    min-width: calc(46.67%);
     margin-right: 30px;
     margin-bottom: 30px;
   }
@@ -828,14 +853,6 @@ ul {
   }
   .partners__item:nth-child(n + 5) {
     margin-bottom: 0;
-  }
-}
-
-@media screen and (min-width: 480px) and (max-width: 1599px) {
-  .partners__title {
-    margin-bottom: 30px;
-    font-size: 28px;
-    line-height: 1.17;
   }
 }
 
@@ -1172,7 +1189,6 @@ ul {
 }
 
 .page-footer {
-  padding: 60px 0;
   background-color: #2f303a;
 }
 
@@ -1317,7 +1333,7 @@ ul {
             justify-content: center;
   }
   .footer-form__input {
-    width: 358px;
+    max-width: 358px;
     margin-bottom: 0;
   }
 }
