--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -39,9 +39,7 @@
     line-height: 1.8;
     letter-spacing: 0.03em;
   }
-}
 
-@media screen and (max-width: $tablet-max) {
   &__item {
     margin-bottom: 30px;
     &:last-child {
@@ -66,7 +64,7 @@
       &:nth-child(2n) {
         margin-right: 0;
       }
-      &:nth-child(n + 5) {
+      &:nth-child(n + 3) {
         margin-bottom: 0;
       }
     }
@@ -85,6 +83,7 @@
     &__item {
       max-width: 270px;
       margin-right: 30px;
+      margin-bottom: 0;
       &:last-child {
         margin-right: 0;
       }
