--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -27,7 +27,6 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-  // margin-right: 30px;
   margin-right: auto;
   margin-left: auto;
   margin-bottom: 30px;
@@ -87,12 +86,12 @@
     }
 
     &__img {
-      width: 354px;
+      max-width: 100%;
     }
   }
 }
 
-@media screen and(min-width: $desktop-min) {
+@media screen and (min-width: $desktop-min) {
   .team {
     &__list {
       display: flex;
@@ -110,7 +109,7 @@
   .team-member {
     width: 270px;
     margin-right: 30px;
-    margin-bottom: 30px;
+    margin-bottom: 0;
 
     &:last-child {
       margin-right: 0;
