--- a/css/main.css
+++ b/css/main.css
@@ -949,19 +949,58 @@ img {
 }
 
 .portfolio__button-list {
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   margin-bottom: 40px;
 }
 
-.portfolio__button-item {
-  margin-right: 8px;
-  margin-bottom: 15px;
+@media screen and (max-width: 767px) {
+  .portfolio__button-item {
+    margin-right: 8px;
+    margin-bottom: 15px;
+  }
+  .portfolio__button-item:nth-last-child(2n - 3) {
+    margin-right: 0;
+  }
+  .portfolio__button-item:first-child {
+    margin-right: 8px;
+  }
+  .portfolio__button-item:nth-child(n + 4) {
+    margin-bottom: 0;
+  }
 }
 
-.portfolio__button-item:last-child {
-  margin-right: 0;
+@media screen and (min-width: 768px) and (max-width: 1599px) {
+  .portfolio__button-list {
+    margin-bottom: 30px;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: start;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .portfolio__button-item {
+    margin-right: 8px;
+    margin-bottom: 0;
+  }
+  .portfolio__button-item:last-child {
+    margin-right: 0;
+  }
+}
+
+@media screen and (min-width: 1600px) {
+  .portfolio__button-list {
+    margin-bottom: 50px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .portfolio__button-item {
+    margin-right: 8px;
+    margin-bottom: 0;
+  }
+  .portfolio__button-item:last-child {
+    margin-right: 0;
+  }
 }
 
 .button-close {
@@ -1066,22 +1105,14 @@ img {
 .portfolio__button-list {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: start;
 }
 
 .portfolio__card-list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: stretch;
-      -ms-flex-pack: stretch;
-          justify-content: stretch;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .portfolio__card-item {
@@ -1101,6 +1132,54 @@ img {
   margin-bottom: 0;
 }
 
+@media screen and (max-width: 767px) {
+  .portfolio__button-list {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: start;
+  }
+  .portfolio__card-list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: stretch;
+        -ms-flex-pack: stretch;
+            justify-content: stretch;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1599px) {
+  .portfolio__card-item {
+    width: 354px;
+    height: 440px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+  }
+  .portfolio__card-item:nth-child(even) {
+    margin-right: 0;
+  }
+  .portfolio__card-item:last-child {
+    margin-bottom: 0;
+    margin-right: 0;
+  }
+}
+
+@media screen and (min-width: 1600px) {
+  .portfolio__card-item {
+    width: 370px;
+    height: 404px;
+    margin-left: 30px;
+    margin-bottom: 30px;
+  }
+  .portfolio__card-item:nth-child(3n + 1) {
+    margin-left: 0;
+  }
+  .portfolio__card-item:nth-last-child(-n + 3) {
+    margin-bottom: 0;
+  }
+}
+
 .card-picture {
   display: block;
 }
@@ -1108,10 +1187,12 @@ img {
 .card {
   position: relative;
   display: block;
+  width: 450px;
+  height: 294px;
   overflow: hidden;
-  -webkit-box-pack: stretch;
-      -ms-flex-pack: stretch;
-          justify-content: stretch;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .card:hover::before {
@@ -1144,7 +1225,9 @@ img {
 .card--hover-overlay {
   position: absolute;
   display: block;
-  width: 370px;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
   height: 294px;
   left: 0;
   bottom: 0;
@@ -1181,11 +1264,31 @@ img {
 
 .card__border {
   padding: 20px 24px;
-  width: 100%;
+  width: inherit;
   text-align: left;
   border-left: 1px solid #eeeeee;
   border-right: 1px solid #eeeeee;
   border-bottom: 1px solid #eeeeee;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1599px) {
+  .card {
+    width: 354px;
+  }
+  .card__border {
+    padding: 20px 24px;
+    width: inherit;
+    text-align: left;
+    border-left: 1px solid #eeeeee;
+    border-right: 1px solid #eeeeee;
+    border-bottom: 1px solid #eeeeee;
+  }
+}
+
+@media screen and (min-width: 1600px) {
+  .card {
+    width: 370px;
+  }
 }
 
 .page-footer {
