--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -64,17 +64,63 @@
 }
 
 .portfolio__button-list {
-  justify-content: center;
   margin-bottom: 40px;
-  // margin-bottom: 50px;
 }
 
-.portfolio__button-item {
-  margin-right: 8px;
-  &:last-child {
-    margin-right: 0;
+@media screen and (max-width: $tablet-max) {
+  .portfolio__button-item {
+    margin-right: 8px;
+    margin-bottom: 15px;
+
+    &:nth-last-child(2n - 3) {
+      margin-right: 0;
+    }
+
+    &:first-child {
+      margin-right: 8px;
+    }
+
+    &:nth-child(n + 4) {
+      margin-bottom: 0;
+    }
   }
-  margin-bottom: 15px;
+}
+
+@media screen and (min-width: $tablet-min) and (max-width: $desktop-max) {
+  .portfolio {
+    &__button-list {
+      margin-bottom: 30px;
+      align-items: start;
+      justify-content: center;
+    }
+
+    &__button-item {
+      margin-right: 8px;
+      margin-bottom: 0;
+
+      &:last-child {
+        margin-right: 0;
+      }
+    }
+  }
+}
+
+@media screen and (min-width: $desktop-min) {
+  .portfolio {
+    &__button-list {
+      margin-bottom: 50px;
+      justify-content: center;
+    }
+
+    &__button-item {
+      margin-right: 8px;
+      margin-bottom: 0;
+
+      &:last-child {
+        margin-right: 0;
+      }
+    }
+  }
 }
 
 // Стили кнопки Close модального окна
