--- a/sass/components/_portfolio-page.scss
+++ b/sass/components/_portfolio-page.scss
@@ -9,22 +9,18 @@
 }
 
 .portfolio__button-list {
+  @extend %list-nomarked;
   @extend %flex-centered;
   flex-wrap: wrap;
-  justify-content: start;
-  @extend %list-nomarked;
 }
 
 .portfolio__card-list {
   display: flex;
-  flex-direction: column;
-  justify-content: stretch;
-  // flex-wrap: wrap;
+  flex-wrap: wrap;
   @extend %list-nomarked;
 }
 
 .portfolio__card-item {
-  // margin-left: 30px;
   margin-bottom: 30px;
   transition: box-shadow $animation-var;
   &:hover,
@@ -48,4 +44,49 @@
 
 .portfolio__card-link {
   @extend %link-nolined;
+}
+
+@media screen and (max-width: $tablet-max) {
+  .portfolio__button-list {
+    justify-content: start;
+  }
+
+  .portfolio__card-list {
+    flex-direction: column;
+    justify-content: stretch;
+  }
+}
+
+@media screen and (min-width: $tablet-min) and (max-width: $desktop-max) {
+  .portfolio__card-item {
+    width: 354px;
+    height: 440px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+
+    &:nth-child(even) {
+      margin-right: 0;
+    }
+    &:last-child {
+      margin-bottom: 0;
+      margin-right: 0;
+    }
+  }
+}
+
+@media screen and (min-width: $desktop-min) {
+  .portfolio__card-item {
+    width: 370px;
+    height: 404px;
+    margin-left: 30px;
+    margin-bottom: 30px;
+
+    &:nth-child(3n + 1) {
+      margin-left: 0;
+    }
+
+    &:nth-last-child(-n + 3) {
+      margin-bottom: 0;
+    }
+  }
 }
