--- a/css/main.css
+++ b/css/main.css
@@ -352,25 +352,43 @@ img {
   padding: 118px 60px;
   text-align: center;
   border-right-color: #c4c4c4;
-  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/m.hero-bg-image.jpg);
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/m.hero-bg-image.jpg);
+  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/m.hero-bg-image1X.jpg);
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/m.hero-bg-image1X.jpg);
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .hero .hero {
+    background-image: url(../images/m.hero-bg-image2X.jpg);
+  }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1599px) {
   .hero {
     padding: 118px 204px;
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/t.hero-bg-image.jpg);
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/t.hero-bg-image.jpg);
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/t.hero-bg-image1X.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/t.hero-bg-image1X.jpg);
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1599px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (max-width: 1599px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (max-width: 1599px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (max-width: 1599px) and (min-resolution: 2dppx) {
+  .hero .hero {
+    background-image: url(../images/t.hero-bg-image2X.jpg);
   }
 }
 
 @media screen and (min-width: 1600px) {
   .hero {
     padding: 200px 452px;
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero-bg-image.jpg);
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-bg-image.jpg);
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/d.hero-bg-image1X.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/d.hero-bg-image1X.jpg);
+  }
+}
+
+@media screen and (min-width: 1600px) and (min-device-pixel-ratio: 2), screen and (min-width: 1600px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1600px) and (min-resolution: 192dpi), screen and (min-width: 1600px) and (min-resolution: 2dppx) {
+  .hero .hero {
+    background-image: url(../images/d.hero-bg-image2X.jpg);
   }
 }
 
@@ -587,17 +605,8 @@ img {
 
 @media screen and (min-width: 768px) and (max-width: 1599px) {
   .team__list {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
   }
   .team-member {
     width: 354px;
@@ -615,7 +624,7 @@ img {
   }
 }
 
-@media screen and (min-width: 1600px) {
+@media screen and (min-width: 768px) {
   .team__list {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -627,6 +636,9 @@ img {
         -ms-flex-align: start;
             align-items: flex-start;
   }
+}
+
+@media screen and (min-width: 1600px) {
   .team__title {
     text-align: center;
     margin-bottom: 50px;
@@ -948,10 +960,6 @@ img {
           box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-.portfolio__button-list {
-  margin-bottom: 40px;
-}
-
 @media screen and (max-width: 767px) {
   .portfolio__button-item {
     margin-right: 8px;
@@ -965,6 +973,9 @@ img {
   }
   .portfolio__button-item:nth-child(n + 4) {
     margin-bottom: 0;
+  }
+  .portfolio__button-list {
+    margin-bottom: 40px;
   }
 }
 
@@ -1166,6 +1177,10 @@ img {
 }
 
 @media screen and (min-width: 1600px) {
+  .portfolio__card-list {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
   .portfolio__card-item {
     width: 370px;
     height: 404px;
@@ -1274,14 +1289,6 @@ img {
 @media screen and (min-width: 768px) and (max-width: 1599px) {
   .card {
     width: 354px;
-  }
-  .card__border {
-    padding: 20px 24px;
-    width: inherit;
-    text-align: left;
-    border-left: 1px solid #eeeeee;
-    border-right: 1px solid #eeeeee;
-    border-bottom: 1px solid #eeeeee;
   }
 }
 
@@ -1538,7 +1545,7 @@ img {
 
 .form__input {
   display: block;
-  width: 370px;
+  width: 100%;
   height: 40px;
   padding: 10px 5px 10px 42px;
   -webkit-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1633,6 +1640,7 @@ img {
 
 .agreement__link {
   display: inline-block;
+  margin-left: 5px;
   cursor: pointer;
   font-family: Roboto, sans-serif;
   font-weight: 400;
@@ -1642,6 +1650,21 @@ img {
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
   color: #2196f3;
+}
+
+@media screen and (min-width: 1600px) {
+  .modal {
+    width: 528px;
+    height: 581px;
+  }
+  .agreement {
+    font-size: 14px;
+    line-height: 1.71;
+  }
+  .agreement__link {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 
 .m-backdrop {
