--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -91,8 +91,7 @@
 
   &__input {
     display: block;
-    width: 370px;
-    // width: 448px;
+    width: 100%;
     height: 40px;
     padding: 10px 5px 10px 42px;
     transition: border-color $animation-var;
@@ -149,7 +148,6 @@
     display: inline-block;
     width: 16px;
     height: 15px;
-    // margin-left: 14px;
     transition: background-color $animation-var, border $animation-var;
     border: 2px solid #000000;
     border-radius: 2px;
@@ -163,22 +161,35 @@
   font-weight: 400;
   font-size: 12px;
   line-height: 1.17;
-  // font-size: 14px;
-  // line-height: 1.71;
   letter-spacing: 0.03em;
 
   &__link {
     display: inline-block;
-    // margin-left: 5px;
+    margin-left: 5px;
     cursor: pointer;
     font-family: Roboto, sans-serif;
     font-weight: 400;
     font-size: 12px;
     line-height: 1.17;
-    // font-size: 14px;
-    // line-height: 1.71;
     letter-spacing: 0.03em;
     text-decoration-line: underline;
     color: $accent-color;
+  }
+}
+
+@media screen and (min-width: $desktop-min) {
+  .modal {
+    width: 528px;
+    height: 581px;
+  }
+
+  .agreement {
+    font-size: 14px;
+    line-height: 1.71;
+
+    &__link {
+      font-size: 14px;
+      line-height: 1.71;
+    }
   }
 }
