--- a/sass/components/_portfolio-page.scss
+++ b/sass/components/_portfolio-page.scss
@@ -53,7 +53,7 @@
 
   .portfolio__card-list {
     flex-direction: column;
-    justify-content: stretch;
+    align-items: stretch;
   }
 }
 
@@ -63,6 +63,9 @@
     height: 440px;
     margin-right: 30px;
     margin-bottom: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
 
     &:nth-child(even) {
       margin-right: 0;
@@ -72,13 +75,12 @@
       margin-right: 0;
     }
   }
+  .portfolio__card-link {
+    height: 100%;
+  }
 }
 
 @media screen and (min-width: $desktop-min) {
-  .portfolio__card-list {
-    flex-wrap: wrap;
-  }
-
   .portfolio__card-item {
     width: 370px;
     height: 404px;
